[tool.poetry]
name = "coursework2"
version = "0.1.0"
description = ""
authors = ["ekaterina besshtannikova <dolmatova3010@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"


[tool.poetry.group.lint.dependencies]
mypy = "^1.11.0"
flake8 = "^7.1.0"
black = "^24.4.2"
isort = "^5.13.2"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
pytest-cov = "^5.0.0"

[tool.isort]
line_length = 119

[tool.black]
line_length = 119

[tool.mypy]
disallow_untyped_defs = true
warn_return_any = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
